--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </li>
 
       <li>
-        <a href="" target="_blank">Helth Plus+</a>
+        <a href="" target="_blank">Health Plus+</a>
       </li>
     </ul>
 
